# advent-of-code

./: advent-of-code.cabal  day02.txt  flake.nix
src/: Day01.hs  Day02.hs  Day03.hs  Utils.hs
