cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

author:             Jonatan Borkowski
maintainer:         jonatan.borkowski@pm.me

extra-source-files: CHANGELOG.md

library
  hs-source-dirs:    src
  exposed-modules:   Utils
                   , Day01
                   , Day02
                   , Day03
  build-depends:     base ^>=4.15.0.0
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -- -Werror

executable advent-of-code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
